[gd_scene load_steps=12 format=3 uid="uid://b0x1ktkwyv13l"]

[ext_resource type="Script" path="res://UI/PlayerPanel.gd" id="1_fatju"]
[ext_resource type="PackedScene" uid="uid://ffyuf8apar7g" path="res://UI/CardDisplay.tscn" id="2_uq032"]
[ext_resource type="PackedScene" uid="uid://b0ya1pk5ik0ea" path="res://PlayerInfo.tscn" id="3_51v3a"]
[ext_resource type="Script" path="res://UI/Displays.gd" id="3_eh28s"]
[ext_resource type="PackedScene" uid="uid://dhryy77waq6s8" path="res://UI/card_select_panel.tscn" id="7_gyjsw"]
[ext_resource type="PackedScene" uid="uid://beaool3b26ge3" path="res://MultiSpellSelect.tscn" id="7_ywh5m"]
[ext_resource type="Resource" uid="uid://6lfphqkx7jyp" path="res://TestSpellDeck.tres" id="9_8a4a6"]
[ext_resource type="Script" path="res://UI/spell_panel_specials.gd" id="9_67sx5"]
[ext_resource type="Script" path="res://UI/PlayerReady.gd" id="10_7ck0y"]
[ext_resource type="Script" path="res://Player/PlayerUIInput.gd" id="11_p0xvb"]
[ext_resource type="Resource" uid="uid://dg45jqu0yw6f6" path="res://Inputs/Null Input.tres" id="12_c6o1s"]

[node name="NewSpellPanel" type="PanelContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"Panel2"
script = ExtResource("1_fatju")
card_scene = ExtResource("2_uq032")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Permanent Selections" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayerInfo" parent="VBoxContainer/Permanent Selections" instance=ExtResource("3_51v3a")]
unique_name_in_owner = true
layout_mode = 2
alignment = 0

[node name="Temporary Selections" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Displays" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("3_eh28s")

[node name="Multi Spell Select" parent="VBoxContainer/Displays" instance=ExtResource("7_ywh5m")]
layout_mode = 2

[node name="NewSpell" parent="VBoxContainer/Displays" instance=ExtResource("7_gyjsw")]
visible = false
layout_mode = 2
theme_type_variation = &"SpellPanel"
title = "New Spell"
current_deck_type = 3
cards = ExtResource("9_8a4a6")
context = 1
first = true

[node name="SpellSelect1" parent="VBoxContainer/Displays" instance=ExtResource("7_gyjsw")]
unique_name_in_owner = true
visible = false
layout_mode = 2
title = "Spell1"
current_deck_type = 1
cards = ExtResource("9_8a4a6")

[node name="SpellSelect2" parent="VBoxContainer/Displays" instance=ExtResource("7_gyjsw")]
unique_name_in_owner = true
visible = false
layout_mode = 2
title = "Spell2"
current_deck_type = 1
cards = ExtResource("9_8a4a6")

[node name="SpellSelect3" parent="VBoxContainer/Displays" instance=ExtResource("7_gyjsw")]
unique_name_in_owner = true
visible = false
layout_mode = 2
title = "Melee"
current_deck_type = 1
cards = ExtResource("9_8a4a6")

[node name="SpellSelect4" parent="VBoxContainer/Displays" instance=ExtResource("7_gyjsw")]
unique_name_in_owner = true
visible = false
layout_mode = 2
title = "Mobility"
current_deck_type = 1
cards = ExtResource("9_8a4a6")

[node name="PlayerReady" type="PanelContainer" parent="VBoxContainer/Displays"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_type_variation = &"Panel2"
script = ExtResource("10_7ck0y")

[node name="Label" type="Label" parent="VBoxContainer/Displays/PlayerReady"]
texture_filter = 1
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Ready"
horizontal_alignment = 1

[node name="InputCooldown" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.25
one_shot = true

[node name="PlayerUIInput" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("11_p0xvb")
input_keys = ExtResource("12_c6o1s")

[node name="SpellPanelSpecials" type="Node" parent="."]
script = ExtResource("9_67sx5")

[connection signal="player_joined" from="." to="VBoxContainer/Displays" method="_on_player_panel_player_joined"]
[connection signal="player_joined" from="." to="SpellPanelSpecials" method="_on_new_spell_panel_player_joined"]
[connection signal="player_ready" from="VBoxContainer/Displays/PlayerReady" to="." method="_on_player_ready_player_ready"]
[connection signal="player_unready" from="VBoxContainer/Displays/PlayerReady" to="." method="_on_player_ready_player_unready"]
[connection signal="timeout" from="InputCooldown" to="." method="_on_input_cooldown_timeout"]
